added loading spinner and enter key

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                     <button id="searchBtn" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
+            <!-- spinner -->
+            <div id="loadingSpinner" class="d-flex justify-content-center d-none">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
             <!-- Single Lyrics -->
             <div class="single-lyrics text-center">
 
